Alignment fixed

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -34,7 +34,7 @@ body {
     list-style-type: none;
     font-size: 15px;
     padding: 0px 10px 0px 10px;
-    border-right: 2px solid #000000;
+    border-right: 2px solid #c2c2c2;
  }
 
  .announcement-bar-inner-list a {
